@startuml Scene_class_diagram

package transition {
    class Type{}
}

package game {
    interface Scene {
        + Name() string
        + Update(active bool) (nextScene SceneFactory, transitionType transition.Type, err error)
        + Draw(screen *ebiten.Image)
    }

    Scene .right.> transition.Type
}

package scene {
    class PlayScene {
        - objects []Entity
        - drawer Drawer
        + NewPlayScene() Utils.Factory[PlayScene]
        + Name() string
        + Update(active bool) (nextScene Utils.Factory[Scene], transitionType transition.Type, err error)
        + Draw(screen *ebiten.Image)
    }
    note right of PlayScene : Update() は　objects.Update() を呼ぶ\nDraw() は drawer.Draw() を呼ぶ\nNewHogeScene() の型は関数型をいい感じに命名したもの

    PlayScene -up-|> game.Scene
    PlayScene .up.> transition.Type


    PlayScene "1" *-- "0..*" Entity
    PlayScene "1" *-left- "1" Drawer

    interface Entity {
        + Name() string
        + Update(active bool) (err error)
        + Draw() (image *ebiten.Image)
        + Position() Utils.Position
    }

    interface Drawer {
        + Draw(screen *ebiten.Image, objects []Entity, center Position)
    }

    class MockCamera {
        + Draw(screen *ebiten.Image, objects []Entity, center Position)
        + NewMockCamera() Utils.Factory[MockCamera]
    }
    note left of MockCamera : Transformが表す座標をそのまま画面座標として表示\nあとでもっと高機能のものを実装予定

    MockCamera -up-|> Drawer
    MockCamera .> Entity
}

package gameObject {
    class GameObject {
        - name string
        + Scene *scene.PlayScene
        - transform() Transform
        - render() Render
        - components() []Component
        + Name() string
        + Update(active bool) (err error)
        + Draw() (image *ebiten.Image)
        + Position() Utils.Position
        + NewHogeObject(NewTransform Utils.Factory[Transform], NewRender Utils.Factory[Render]) Utils.Factory[HogeObject]
        + AddComponent(c Component)
        + GetComponent[T | Component]() T, error
    }
    note right of GameObject : 標準的なゲームオブジェクト\n原則これのインスタンスを使う\n違うタイプのゲームオブジェクトが欲しければ手書き実装\nDraw(sc) は render.Draw(g, sc) を呼ぶ\nUpdate() は components の Update() を呼ぶ

    GameObject -up-|> scene.Entity
    GameObject ...> scene.PlayScene
    GameObject *-- Transform
    GameObject *-- Render

    GameObject "1" *-- "0..*" Component

    interface Transform {
        + Position() Position
    }

    interface Render {
        + Draw() (image *ebiten.Image)
    }

    interface Component {
        + Update(active bool) (err error)
    }
}

package Component {
    class FugaComponent {
        + GameObject *gameObject.GameObject
        + NewFugaComponent(obj GameObject) Utils.Factory[FugaComponent]
        + Update(active bool) (err error)
    }

    FugaComponent -up-|> gameObject.Component
    FugaComponent ...> gameObject.GameObject

    class StdTransform {
        + Position() Position
        + NewStdTransform() Utils.Factory[StdTransform]
    }

    StdTransform -up-|> gameObject.Transform

    class StdRender {
        - image 型未定
        + NewStdRender(obj GameObject) Utils.Factory[StdRender]
        + Draw() (image *ebiten.Image)
    }

    StdRender -up-|> gameObject.Render
}
@enduml